2002-08-13  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-parse.el (sgml-open-element): add optional net-enabled
	parameter.
	(sgml-do-start-tag): use new parameter on sgml-open-element.

	* psgml-edit.el (sgml-edit-attrib-field-start,
	sgml-edit-attrib-clear, sgml-attribute-buffer,
	sgml-edit-attrib-specification-list): change sgml-category to
	category. Fix bug with edit attributes.
	(sgml-change-element-name): insert TAGC before finding new element
	object. Fix bug with change element name not copying attributes.

2002-05-08  Lennart Staflin  <lenst@lysator.liu.se>

	* Version 1.3.0 released
	
	* psgml.el (sgml-default-nonsticky): moved from psgml-other.el

2002-05-07  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml-maint.el (psgml-common-files): add psgml-sysdep
	(psgml-find-source-dir): fix version

2002-04-26  Lennart Staflin  <lenst@lysator.liu.se>

	* psgml.el (sgml-mode): make adding to
	text-property-default-nonsticky conditional on
	sgml-default-nonsticky to work with Emacs < 21.
	
2002-04-25  Lennart Staflin  <lenst@lysator.liu.se>

	fixing merge of Dave Loves patch.
	
2002-02-08  Dave Love  <fx@gnu.org>
	[Merging from 1.2.4 branch /lenst]
	
	Changes for various things: Useful DTD-less XML editing; avoiding
	CL at runtime; some Emacs portability; Mule-related fixes,
	particularly for non-ASCII names in DTD.

	* psgml-maint.el (psgml-find-source-dir): Fix version number.

	* psgml-info.el (sgml-set-difference, sgml-union): New functions.
	(sgml-eltype-refrenced-elements): Use them and also use
	add-to-list instead of pushnew.

	* psgml-dtd.el: Doc and message fixes.
	(sgml-write-dtd): Use sgml-set-buffer-multibyte and bind
	coding-system-for-write around write-region.
	(sgml-merge-attlists): Use copy-sequence, not copy-list.

	* psgml-edit.el: Require cl when compiling.  Don't set
	byte-compile-warnings.
	(sgml-quote-attribute-value, sgml-tag-regexp)
	(sgml-edit-attrib-next): Use documented way of including `-' in
	regexp range.